RESOLVED FIXED55964
[Qt] Compilation fails with --3d-canvas
https://bugs.webkit.org/show_bug.cgi?id=55964
Summary [Qt] Compilation fails with --3d-canvas
Jarkko Sakkinen
Reported 2011-03-08 13:49:56 PST
There are two issues: - WebCore.pro refers to non-existing files: OESVertexArray.h/cpp - Extension3DQt.cpp uses undefined GL_FALSE. Should include <QGLContext>.
Attachments
compilation fix (2.11 KB, patch)
2011-03-08 23:55 PST, Jarkko Sakkinen
no flags
Jarkko Sakkinen
Comment 1 2011-03-08 13:54:27 PST
Created a fix candidate: - Removed OESVertexArray.h/cpp from WebCore.pro - Added include <QGLWidget> I'll submit patch if this resolves compilation issue.
Jarkko Sakkinen
Comment 2 2011-03-08 14:10:08 PST
Added WebGLVertexArrayObjectOES.h/cpp to WebCore.pro.
Jarkko Sakkinen
Comment 3 2011-03-08 23:39:00 PST
Compilation fix seems to work. Now preparing the patch for the contribution.
Jarkko Sakkinen
Comment 4 2011-03-08 23:55:04 PST
Created attachment 85136 [details] compilation fix
Jarkko Sakkinen
Comment 5 2011-03-14 12:46:56 PDT
Changing to unconfirmed until commit bot has taken this.
WebKit Commit Bot
Comment 6 2011-03-14 15:25:44 PDT
Comment on attachment 85136 [details] compilation fix Clearing flags on attachment: 85136 Committed r81069: <http://trac.webkit.org/changeset/81069>
WebKit Commit Bot
Comment 7 2011-03-14 15:25:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.