2011-03-14  Jarkko Sakkinen  <jarkko.j.sakkinen@gmail.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Compilation fails with --3d-canvas
        https://bugs.webkit.org/show_bug.cgi?id=55964

        * WebCore.pro:
        * platform/graphics/qt/Extensions3DQt.cpp:

Canonical link: https://commits.webkit.org/70949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81069 268f45cc-cd09-0410-ab3c-d52691b4dbfc